--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
             <div class="header-text">
                 <p class="product-tagline">Professional Sound</p>
-                <h1 class="product-name">TechPRO</h1>
+                <h1 class="product-name green-degraded">TechPRO</h1>
                 <p class="product-description">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero amet labore numquam nostrum iste ipsum
                     molestias voluptatibus, tempore fugit voluptatum fuga maiores odio consequatur, facilis, eius
@@ -39,6 +39,35 @@
             </div>
         </div>
     </header>
+
+    <section class="section">
+        <div class="container section-content">
+            <div class="content">
+                <img src="img/icono-sonido.svg" alt="sound" width="100" height="100">
+                <h3>Gran sonido</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed nobis saepe architecto hic vero,
+                    facilis porro eos incidunt aliquid in dolor minima ratione placeat sunt nesciunt quo fugit. Rerum,
+                    iste.</p>
+            </div>
+
+            <div class="content">
+                <img src="img/icono-garantia.svg" alt="sound" width="100" height="100">
+                <h3>Garantía de por vida</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed nobis saepe architecto hic vero,
+                    facilis porro eos incidunt aliquid in dolor minima ratione placeat sunt nesciunt quo fugit. Rerum,
+                    iste.</p>
+            </div>
+
+            <div class="content">
+                <img src="img/icono-bateria.svg" alt="sound" width="100" height="100">
+                <h3>+20 Horas de batería</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed nobis saepe architecto hic vero,
+                    facilis porro eos incidunt aliquid in dolor minima ratione placeat sunt nesciunt quo fugit. Rerum,
+                    iste.</p>
+            </div>
+            
+        </div>
+    </section>
 
 </body>
 
