about it section

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>TechPRO</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;900&family=Roboto:wght@400;700;900&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;900&family=Roboto:wght@400;700;900&display=swap"rel="stylesheet">
+    
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -41,8 +41,8 @@
     </header>
 
     <section class="section">
-        <div class="container section-content">
-            <div class="content">
+        <div class="container section-icons">
+            <div class="icon-content">
                 <img src="img/icono-sonido.svg" alt="sound" width="100" height="100">
                 <h3>Gran sonido</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed nobis saepe architecto hic vero,
@@ -50,7 +50,7 @@
                     iste.</p>
             </div>
 
-            <div class="content">
+            <div class="icon-content">
                 <img src="img/icono-garantia.svg" alt="sound" width="100" height="100">
                 <h3>Garantía de por vida</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed nobis saepe architecto hic vero,
@@ -58,15 +58,29 @@
                     iste.</p>
             </div>
 
-            <div class="content">
+            <div class="icon-content">
                 <img src="img/icono-bateria.svg" alt="sound" width="100" height="100">
                 <h3>+20 Horas de batería</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed nobis saepe architecto hic vero,
                     facilis porro eos incidunt aliquid in dolor minima ratione placeat sunt nesciunt quo fugit. Rerum,
                     iste.</p>
             </div>
-            
+
         </div>
+    </section>
+
+    <section class="about-it">
+        <div class="about-it-grid">
+            <div class="about-it-text">
+                <h2>Sobre los <span>TechPRO</span></h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem, nobis amet! Sit commodi,
+                    ducimus
+                    libero delectus consectetur nostrum quisquam ut officiis, quo aliquid quaerat optio recusandae
+                    veniam
+                    quos saepe unde?</p>
+            </div> 
+        </div>
+
     </section>
 
 </body>
